# FFmpegWrapper

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/clip/: CMakeLists.txt  clip.cpp
examples/decode/: CMakeLists.txt  decode.cpp
examples/dumpFrameInfo/: CMakeLists.txt  dumpFrameInfo.cpp
examples/remuxing/: CMakeLists.txt  remuxing.cpp
examples/transcode/: CMakeLists.txt  transcodeToAAC.cpp
include/FFmpegWrapper/: AVAudioFifoWrap.h  AVCodecContextWrap.h  AVCodecView.h  AVDictionaryWrap.h  AVFormatContextWrap.h  AVFrameWrap.h  AVPacketWrap.h  AVStreamView.h  Common.h  SwrContextWrap.h  Utils.h
src/: AVAudioFifoWrap.cpp  AVCodecContextWrap.cpp  AVDictionaryWrap.h  AVFormatContextWrap.cpp  AVFormatContextWrap.h  AVFrameWrap.cpp  AVPacketWrap.cpp  AVPacketWrap.h  AVStreamView.h  SwrContextWrap.cpp  TimeBaseUtils.h  common.cpp  common.h
